--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
-Revision history for Perl extension Plack::Server::ServerSimple
+Revision history for Perl extension HTTP::Server::Simple::PSGI
+
+0.12  Mon Feb 15 23:57:59 PST 2010
+        - Removed unused modules
+        - Added experimental psgix.io support
 
 0.11  Thu Feb  4 12:16:58 PST 2010
         - Changed the API to work just like HTTP::Server::Simple::PSGI
